Fixed scroll / click issues  when the screen is very small.
On screens where the nav menu doesn't fit, you can now scroll down. Before, on smaller screens, the menu items could be pressed even when hidden.

--- a/assets/public/css/styles.css
+++ b/assets/public/css/styles.css
@@ -73,6 +73,8 @@ header {
   position: fixed;
   width: 100%;
   max-width: var(--max-content-width);
+  overflow-y: scroll;
+  max-height: calc(100vh - 4.125rem);
   background-color: var(--primary-color);
   z-index: 1;
 }
@@ -80,6 +82,7 @@ header {
   transition: all 450ms ease-in-out;
   opacity: 0;
   top: -100%;
+  pointer-events: none;
 }
 .nav-menu__list--show-vertical {
   transition: all 450ms ease-in-out;
@@ -90,6 +93,7 @@ header {
   opacity: 0;
   margin-left: -100%;
   top: 4.125rem;
+  pointer-events: none;
 }
 .nav-menu__list--show-horizontal {
   transition: all 450ms ease-in-out;
